; ModuleID = '/home/carl/AnghaBench/netdata/web/server/extr_web_client.c_web_client_set_path_query.c'
source_filename = "/home/carl/AnghaBench/netdata/web/server/extr_web_client.c_web_client_set_path_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.web_client = type { i64, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.web_client*, i8*, i8*)* @web_client_set_path_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @web_client_set_path_query(%struct.web_client* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.web_client*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.web_client* %0, %struct.web_client** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = ptrtoint i8* %7 to i64
  %10 = ptrtoint i8* %8 to i64
  %11 = sub i64 %9, %10
  %12 = load %struct.web_client*, %struct.web_client** %4, align 8
  %13 = getelementptr inbounds %struct.web_client, %struct.web_client* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load %struct.web_client*, %struct.web_client** %4, align 8
  %16 = getelementptr inbounds %struct.web_client, %struct.web_client* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
